# cmake_gen_pb_example

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: AddHeaderTarget.cmake
protoc/: CMakeLists.txt  msg.proto
protoc/gprotoc/: msg.pb.cc  msg.pb.h
